src/styles/components/swiper.scss
.swiper {
  $this: &;

  overflow: hidden;

  &-wrapper {
    display: grid;
    grid-auto-flow: column;
    counter-reset: step;
  }

  &-pagination {
    &-horizontal {
      display: grid;
      grid-auto-flow: column;
      column-gap: 4px;
      justify-content: center;
      margin-top: 12px;

      @include b-up(xl) {
        display: none;
      }
    }

    &-bullet {
      width: 8px;
      height: 8px;
      background: #c9c9c9;
      border-radius: 4px;

      &-active {
        background: $primary-gradient;
      }
    }
  }

  &.features {
    position: relative;

    #{$this}-slide {
      margin-right: 32px;

      @include b-d(xl) {
        margin-right: 24px;
      }

      @include b-d(md) {
        margin-right: 16px;
      }
    }

    #{$this}-wrapper {
      display: grid;
      grid-auto-columns: 424px;
      grid-auto-flow: column;

      @include b-d(xxl) {
        grid-auto-columns: calc(100% / 3.2 + 10px);
      }

      @include b-d(xl) {
        grid-auto-columns: calc(50% + 12px);
      }

      @include b-d(md) {
        grid-auto-columns: calc(100% + 16px);
      }
    }

    #{$this}-button {
      &-prev,
      &-next {
        position: absolute;
        top: calc(50% - 46px);
        display: grid;
        align-items: center;
        justify-content: center;
        width: 52px;
        height: 52px;
        background-color: $white;
        border: 1px solid $gray-300;
        border-radius: 50%;
        box-shadow: 0 6px 44px rgba(0, 0, 0, 10%);
        transition: visibility 250ms, opacity 250ms, background-color 250ms;

        @include b-d(md) {
          top: calc(50% - 36px);
          width: 40px;
          height: 40px;

          svg {
            width: 20px;
            height: 20px;
          }
        }
      }

      &-prev {
        left: calc(((100% - 1240px) / 2) - 26px);

        @include b-up(xxl) {
          left: 74px;
        }

        @include b-d(container) {
          left: 14px;
        }

        @include b-d(md) {
          left: 10px;
        }

        svg {
          transform: scaleX(-1);
        }
      }

      &-next {
        right: calc(((100% - 1240px) / 2) + (100% / 3.2 / 5 - 26px));

        @include b-up(xxl) {
          right: 74px;
        }

        @include b-d(container) {
          right: calc(100% / 3.2 / 5 + 16px);
        }

        @include b-d(xl) {
          right: 14px;
        }

        @include b-d(md) {
          right: 10px;
        }
      }

      &:disabled {
        visibility: hidden;
        opacity: 0;
      }

      &:hover {
        background-color: $gray-100;
      }
    }
  }
}

